# comrade

./: .gitignore  Cargo.toml  clippy.toml
comrade/: Cargo.toml  build.rs
comrade-cli/: Cargo.toml
comrade-cli/src/: app.rs  errors.rs  main.rs  terminal.rs  ui.rs  utils.rs
comrade-cli/src/app/: mod.rs
comrade-cli/src/app/tabs/: config.rs  debug.rs  events.rs  logs.rs  mod.rs
comrade/src/: config.rs  driver.rs  errors.rs  events.rs  lib.rs  logwatch.rs  parser.rs  triggers.rs  watcher.rs
comrade/src/config/: mod.rs  triggers.rs
