[package]
name = "comrade-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "comrade"
path = "src/main.rs"

[dependencies]
comrade = { path = "../comrade" }
anyhow = "1.0"
camino = "1.0"
clap = { version = "3.1", features = ["derive"] }
crossterm = "0.23"
downcast-rs = "1.2"
humantime = "2.1"
indexmap = "1.8"
log = { version = "0.4", features = ["std", "release_max_level_debug"] }
path-clean = "0.1"
thiserror = "1.0"
tui = "0.18"
tui-logger = { git = "https://github.com/gin66/tui-logger.git", rev = "cd7e42665a8eac60adac6ab5d570730dfbcb3a12" }
