[package]
name = "comrade"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
built = "0.5"

[dependencies]
chrono = "0.4"
crossbeam-channel = "0.5.4"
lazy_static = "1.4.0"
log = { version = "0.4.17", features = ["std"] }
notify = "5.0.0-pre.15"
parking_lot = "0.12.0"
platform-dirs = "0.3.0"
regex = "1.5.6"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.31"
toml_edit = { version = "0.14.4", features = ["serde"] }
