[package]
name = "comrade"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
built = "0.5"

[dependencies]
arc-swap = "1.5"
crossbeam-channel = "0.5"
lazy_static = "1.4"
log = { version = "0.4", features = ["std"] }
notify = "5.0.0-pre.15"
parking_lot = "0.12"
platform-dirs = "0.3"
regex = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_with = "1.13"
thiserror = "1.0"
toml_edit = { version = "0.14", features = ["serde"] }
